--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
           <a class="nav-link" routerLink="about" routerLinkActive="bg-dark text-white">about</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="product" routerLinkActive="bg-dark text-white">products</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="contact" routerLinkActive="bg-dark text-white">contact</a>
         </li>
       </ul>
