--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,6 +27,7 @@ binding
 -ngIf => @if{}@else{}
 -ngFor => @for{}
 -->
+<app-nav></app-nav>
 <p>home</p>
 <!--<ul>-->
 <!--  @for (u of users; track u){-->
