--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -19,6 +19,7 @@
           <a class="nav-link" routerLink="/contact" routerLinkActive="bg-dark text-white">contact</a>
         </li>
       </ul>
+      <span>cart Count: {{cartCount}}</span>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
