--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!--<app-about></app-about>-->
 <!--<app-contact></app-contact>-->
 <!--<ayhaga></ayhaga>-->
-
+<app-nav></app-nav>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
